test/fail/ajaxnonstringid.app
//can only be plain
application test

section pages

define page home() {
  //var s: String := "hoi"
  block[id:= "s"] { "hoi1"} 
}
